--- a/About.html
+++ b/About.html
@@ -3,13 +3,13 @@
     <head>
         <title>About | Vortex network</title>
 		<link href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway|Roboto" rel="stylesheet">
-		<link rel="stylesheet" href="../css/style.css">
+		<link rel="stylesheet" href="./css/style.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script src="./script/lodash.js"></script>
 		<script defer src="./script/script.js"></script>
 		<script defer src="./script/autoExpand.js"></script>
 		<script src="https://cdn.rawgit.com/jackmoore/autosize/master/dist/autosize.min.js"></script>
-        <link   rel="stylesheet" href="../css/newlook.css">        
+        <link   rel="stylesheet" href="./css/newlook.css">        
             <script type="text/javascript">
                 /* =============================
                 This script generates sample text for the body content. 
@@ -44,7 +44,7 @@
 			<div class="innertube">
 				<h1>Main tabs</h1>
 				<ul>
-					<li><a href="./Main.html">Home</a></li>
+					<li><a href="./index.html">Home</a></li>
 					<li><a href="./About.html">about</a></li>
 					<li><a href="https://k3chow12.wixsite.com/vortexnetwork/contactus">contact</a></li>
 					<li><a href="./Server.html">Servers</a></li>
